Closed Bug 462354 Opened 16 years ago Closed 16 years ago

in redux sampling test triggers failed assertion in mmgc on intel mac 10.5

Categories

(Tamarin Graveyard :: Virtual Machine, defect, P2)

x86
macOS
defect

Tracking

(Not tracked)

VERIFIED FIXED
Future

People

(Reporter: dschaffe, Assigned: tierney)

Details

running as3/sampling/Callback test on osx 10.5 intel mac triggers failed assertion.

I reproduced locally by downloading redux 1039, worked in tc.

dschaffes-macbook-pro:acceptance dschaffe$ $AVM as3/sampling/Callback.abc 
Sampling api: callback
callback1 called at 31767
Object 0x12fd7e8 allocated here:
Didn't mark pointer at 0x12fd808, object 0x146d6a8 allocated here:
Assertion failed: "((false))" ("/Users/build/buildbot/tamarin-redux/mac-intel-10_5/tamarin-redux/MMgc/GC.cpp":3258)
Flags: wanted-flashplayer10+
Flags: in-testsuite+
Flags: flashplayer-triage+
Flags: flashplayer-qrb?
Debug builds are starting to trigger a lot of these -- some are false positives, but I think the Callback one is legit and needs fixing.
fails on ppc 10.5 osx as well as x86.

for debugger builds we made any failed assertion fail the build and we have recently added debug builds.  it should stabilize soon.
Assignee: nobody → tierney
Status: NEW → ASSIGNED
Flags: flashplayer-qrb?
Priority: -- → P2
Target Milestone: --- → Future
This appears to be fixed now.  It was probably by my recent changes to fix bug 464957
Status: ASSIGNED → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
Flags: flashplayer-qrb+
Testcase passing, removed the exclude:

changeset:   1151:e3f9c488f99d
user:        Brent Baker <brbaker@adobe.com>
date:        Tue Nov 25 13:15:01 2008 -0500
summary:     Removed the 'skip' for testcases related to the following bugs, I have run the testcases that were skipped on the target platform and everything was passing:https://bugzilla.mozilla.org/show_bug.cgi?id=455062
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.